kubernetes-old/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: backend-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
