kubernetes-old/traefik-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-api
spec:
  replacePathRegex:
    regex: ^/play(.*)
    replacement: /$1

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-rewrite-api@kubernetescrd
spec:
  tls:
    - hosts:
        - app.vyntix.tech
      secretName: tls-cert-ca-key-pair
  ingressClassName: traefik
  rules:
    - host: app.vyntix.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
